--- a/Docubot.ipynb
+++ b/Docubot.ipynb
@@ -354,7 +354,7 @@
       "source": [
         "from pyngrok import ngrok\n",
         "ngrok.kill()\n",
-        "ngrok.set_auth_token('2fniFpLaAHnfqjDvk7NPxuKDLNO_54Hq2ptFgfQCxgGRuAvQp')\n",
+        "ngrok.set_auth_token('replace_ngrok_token')\n",
         "public_url = ngrok.connect(8501)\n",
         "print('Streamlit is running at:', public_url)\n",
         "!streamlit run --server.port 8501 RAG_Chatbot.py >/dev/null &"
